Added ogl licence info

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2021 - <a href="https://danielwinfield.uk">Daniel Winfield</a> - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2021 - <a href="https://danielwinfield.uk">Daniel Winfield</a> - Data sourced from <a href="https://coronavirus.data.gov.uk/">GOV.UK</a> under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>.
     </div>
 </footer>
 
