Added doughnut chart

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-8">
-			<canvas id="myChart" width="600" height="200"></canvas>
+			<canvas id="cumVaccineDoses" width="600" height="200"></canvas>
 			</div>
 			<div class="col-12 col-md-4">
 			<div class="text-center">
@@ -28,6 +28,11 @@
 				<h1>Second dose</h1>
 				<h1 id="secondDoseCount" class="display-3"></h1>
 			</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 col-md-6">
+				<canvas id="percentageVaccinated" width="600" height="200"></canvas>
 			</div>
 		</div>
     </main>
