--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="text-center">
 					<h1>First dose</h1>
 					<h1 id="firstDoseCount" class="display-3"></h1>
-					<h1>Second dose</h1>
+					<h1>Both doses</h1>
 					<h1 id="secondDoseCount" class="display-3"></h1>
 				</div>
 			</div>
