Added change against previous day

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 			<div class="col-12 col-md-4">
 				<div class="text-center">
 					<h1>First dose</h1>
-					<h1 id="firstDoseCount" class="display-3"></h1>
+					<h1 id="firstDoseCount" class="display-3" style="margin: 0;"></h1>
+					<p id="firstDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
 					<h1>Both doses</h1>
-					<h1 id="secondDoseCount" class="display-3"></h1>
+					<h1 id="secondDoseCount" class="display-3" style="margin: 0;"></h1>
+					<p id="secondDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
 				</div>
 			</div>
 		</div>
