--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-8">
-				<canvas id="cumVaccineDoses" width="600" height="200"></canvas>
+				<canvas id="cumVaccineDoses"></canvas>
 			</div>
 			<div class="col-12 col-md-4">
 				<div class="text-center">
@@ -33,8 +33,18 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12 col-md-6">
-				<canvas id="percentageVaccinated" width="600" height="200"></canvas>
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="text-center">
+					<h1>First dose</h1>
+					<h1 id="firstDosePercentage" class="display-3" style="margin: 0;"></h1>
+					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
+					<h1>Both doses</h1>
+					<h1 id="secondDosePercentage" class="display-3" style="margin: 0;"></h1>
+					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-3">
+				<canvas id="percentageVaccinated" width="100%;" height="100%;"></canvas>
 			</div>
 		</div>
     </main>
