Formatted pie tooltip; changed layout;

--- a/index.html
+++ b/index.html
@@ -35,20 +35,18 @@
 					<h1>First dose</h1>
 					<h1 id="firstDoseCount" class="display-3" style="margin: 0;"></h1>
 					<p id="firstDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
-					<h1>Both doses</h1>
-					<h1 id="secondDoseCount" class="display-3" style="margin: 0;"></h1>
-					<p id="secondDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
+					<h1 id="firstDosePercentage" style="margin: 0;"></h1>
+					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="text-center">
-					<h1>First dose</h1>
-					<h1 id="firstDosePercentage" class="display-3" style="margin: 0;"></h1>
-					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
 					<h1>Both doses</h1>
-					<h1 id="secondDosePercentage" class="display-3" style="margin: 0;"></h1>
+					<h1 id="secondDoseCount" class="display-3" style="margin: 0;"></h1>
+					<p id="secondDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
+					<h1 id="secondDosePercentage" style="margin: 0;"></h1>
 					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
 				</div>
 			</div>
