--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		</div>
     </main>
 
-	<footer class="border-top footer text-muted text-wrap">
-		<div class="row">
+	<footer class="row">
+		<div class="border-top footer text-muted text-wrap">
 			<div class="col-12">
 				&copy; 2021 - <a href="https://danielwinfield.uk">Daniel Winfield</a> - Data sourced from <a href="https://coronavirus.data.gov.uk/">GOV.UK</a> under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>.
 			</div>
