--- a/index.html
+++ b/index.html
@@ -17,54 +17,73 @@
 	</script>
 </head>
 <body>
-<div class="container-fluid">
-    <main role="main" class="pb-3">
-        <div class="row">
-			<div class="col">
-				<div class="text-center">
-					<h1 class="display-4">UK COVID-19 Vaccine Tracker</h1>
+	<header>
+		<nav id="navbar" class="navbar navbar-expand-sm navbar-dark gradient-colour-primary">
+			<a class="navbar-brand signature font-size-2x" href="https://danielwinfield.uk">Daniel Winfield</a>
+		</nav>
+	</header>
+	<div class="container-fluid">
+		<main role="main">
+			<div class="row">
+				<div class="col">
+					<div class="text-center">
+						<h1>UK Coronavirus Vaccine Tracker</h1>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-12 col-md-8">
-				<canvas id="cumVaccineDoses"></canvas>
-			</div>
-			<div class="col-12 col-md-4">
-				<div class="text-center">
-					<h1>First dose</h1>
-					<h1 id="firstDoseCount" class="display-3" style="margin: 0;"></h1>
-					<p id="firstDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
-					<h1 id="firstDosePercentage" style="margin: 0;"></h1>
-					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
+			<div class="row">
+				<div class="col-12 col-md-8 text-center">
+					<div class="card mt-2">
+						<div class="card-body">
+							<h3>Total doses administered</h3>
+							<canvas id="cumVaccineDoses"></canvas>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4 text-center">
+					<div class="card mt-2">
+						<div class="card-body">
+							<h3>Vaccinations as a percentage of the population</h3>
+							<canvas id="percentageVaccinated" width="100%;" height="100%;"></canvas>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-12 col-md-6 col-lg-4">
-				<div class="text-center">
-					<h1>Both doses</h1>
-					<h1 id="secondDoseCount" class="display-3" style="margin: 0;"></h1>
-					<p id="secondDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
-					<h1 id="secondDosePercentage" style="margin: 0;"></h1>
-					<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="card mt-2">
+						<div class="card-body text-center">
+							<h3>First dose</h3>
+							<h1 id="firstDoseCount" class="display-3" style="margin: 0;"></h1>
+							<p id="firstDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
+							<h1 id="firstDosePercentage" style="margin: 0;"></h1>
+							<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="card mt-2">
+						<div class="card-body text-center">
+							<h3>Both doses</h3>
+							<h1 id="secondDoseCount" class="display-3" style="margin: 0;"></h1>
+							<p id="secondDoseChange" class="text-muted" style="font-size: 1.3em;"></p>
+							<h1 id="secondDosePercentage" style="margin: 0;"></h1>
+							<p class="text-muted" style="font-size: 1.3em;">of the UK adult population</p>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="col-12 col-md-6 col-lg-3">
-				<canvas id="percentageVaccinated" width="100%;" height="100%;"></canvas>
-			</div>
-		</div>
-    </main>
+		</main>
 
-	<footer class="row">
-		<div class="border-top footer text-muted text-wrap">
-			<div class="col-12">
-				&copy; 2021 - <a href="https://danielwinfield.uk">Daniel Winfield</a> - Data sourced from <a href="https://coronavirus.data.gov.uk/">GOV.UK</a> under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>.
+		<footer class="row">
+			<div class="border-top footer text-muted text-wrap">
+				<div class="col-12">
+					&copy; 2021 - <a href="https://danielwinfield.uk">Daniel Winfield</a> - Data sourced from <a href="https://coronavirus.data.gov.uk/">GOV.UK</a> under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>.
+				</div>
 			</div>
-		</div>
-	</footer>
-	
-</div>
+		</footer>
+		
+	</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
